# MAIB-Incident-Type-Classifier

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  explore.py  preprocess.py  process_ds.py  pyproject.toml  requirements.txt  setup.py  train.py  try.py
configs/: config.yaml
data/: maib-incident-reports-dataset_sample.jsonl  maib-sample-data.jsonl
data/raw_data/: occurrences_sample.csv
docs/: API.md  DEVELOPMENT.md  USER_GUIDE.md
evaluation_results/: classification_report.txt
explore_data/: explore_raw_csv.py  maib-incident-data-analysis.ipynb  maib-incident-data-analysis.py
scripts/: evaluate.py  inference.py  train.py
src/maib_classifier/: __init__.py
src/maib_classifier/data/: processor.py
src/maib_classifier/inference/: __init__.py  predictor.py
src/maib_classifier/models/: evaluator.py  trainer.py
src/maib_classifier/utils/: config.py  logger.py  utils.py
tests/fixtures/: __init__.py
tests/test_data/: __init__.py
tests/test_inference/: __init__.py
tests/test_models/: __init__.py
tests/test_utils/: __init__.py
